tests/ui/fn/signature-error-reporting-under-verbose.stderr
error[E0308]: mismatched types
  --> $DIR/signature-error-reporting-under-verbose.rs:10:15
   |
LL |     needs_ptr(foo);
   |     --------- ^^^ expected fn pointer, found fn item
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected fn pointer `fn(i32, u32)`
                 found fn item `fn(i32, i32) {foo}`
   = note: when the arguments and return types match, functions can be coerced to function pointers
note: function defined here
  --> $DIR/signature-error-reporting-under-verbose.rs:5:4
   |
LL | fn needs_ptr(_: fn(i32, u32)) {}
   |    ^^^^^^^^^ ---------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
